--- a/Pipfile
+++ b/Pipfile
@@ -6,8 +6,8 @@ verify_ssl = true
 [dev-packages]
 
 [packages]
-requests = "*"
-elasticsearch = "*"
+requests = "==2.23.0"
+elasticsearch = "==7.7.1"
 
 [requires]
-python_version = "3.8"
+python_version = "3.7.4"
